--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     font-size: 14px;
     line-height: 100%;
     font-weight: 300;
-    background: #696969;
+    color: #696969;
 }
 
 .logo{
@@ -37,7 +37,9 @@ body{
 }
 
 .banner{
+	background: #696969;
     display: flex;
-    min-height: 144px;
-    background: #f8f6f6;
+    min-height: 650px;
+    color: #f8f6f6;
+	width: 100%;
 }
