--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face{
+    font-family: 'bignoodletitling';
+    src: url('font/bignoodletitling.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .topheader{
     z-index: 99999;
     position: fixed;
@@ -54,4 +61,43 @@ body{
 
 .banner p{
     font-size: 2rem;
+}
+
+.scrolldown{
+    position: absolute;
+    left: calc(50% - 52px);
+    margin-top: 15%;
+}
+
+.scrolldown img{
+    margin-bottom: 20px;
+}
+
+.scrolldown p{
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.head_white_content{
+    padding: 5%;
+    text-align: center;
+    width: 100%;
+}
+
+.head_white_content p{
+    padding: 20px 90px 0px;
+    color: #696969;
+}
+
+.head_white_content h3{
+    font-family: "bignoodletitling";
+}
+
+.head_white_content span{
+    display: inline-block;
+    width: 100px;
+    height: 2px;
+    background-color: #f15324;
 }
