--- a/style.css
+++ b/style.css
@@ -57,10 +57,12 @@ body{
 
 .banner h2{
     font-size: 3rem;
+    font-family: "bignoodletitling";
 }
 
 .banner p{
     font-size: 2rem;
+    font-family: "bignoodletitling";
 }
 
 .scrolldown{
@@ -100,4 +102,44 @@ body{
     width: 100px;
     height: 2px;
     background-color: #f15324;
+}
+
+.aboutus{
+    margin-bottom: 90px;
+}
+
+.advantage{
+    text-align: center;
+    width: 100%;
+    background: #ebebeb;
+    padding: 30px;
+    margin: 3% 0;
+}
+
+.advantage span{
+    font-size: 60px;
+    color: #f4511e;
+}
+
+.advantage h4{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    letter-spacing: 0.25px;
+    color: #707070;
+    padding: 25px 0 13px;
+}
+
+.advantage p{
+    color: #707070;
+    font-size: 14px;
+    line-height: 100%;
+}
+
+.somefutures{
+    background-color: #171f23;
+    text-align: center;
+    color: #f6f6f6;
+    padding: 60px 0;
+    display: block;
 }
