--- a/style.css
+++ b/style.css
@@ -143,3 +143,42 @@ body{
     padding: 60px 0;
     display: block;
 }
+
+h4{
+    text-transform: uppercase;
+    font-size: 36px;
+}
+
+.head_black_content{
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.head_black_content span{
+    display: inline-block;
+    width: 80px;
+    height: 1px;
+    margin: 25px auto 0;
+    background: #404040;
+}
+
+.numeral>div>span{
+    font-size: 60px;
+    color: #ff7062;
+}
+
+.numeral>div>p{
+    font-size: 15px;
+    color: #ffffff;
+    top:auto;
+    padding: 15px 0 13px;
+}
+
+.numeral>div>h5{
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    letter-spacing: 0.25px;
+    padding: 15px 0 13px;
+}
